drkns 02.07.2020 01:07:47 +0100 - build 5630

1. Экспериментально:
   - В файловых панелях используется стабильная сортировка.
   - Критерии сортировки не используют имя файла в качестве запасного варианта.
   Что это значит:
   - Сортировка в панелях не изменяет текущий порядок эквивалентных элементов.
   Что это значит:
   - Различные критерии можно применять последовательно.
     Например:
     Ctrl+F5, Ctrl+F6 - сотрировать файлы по размеру, файлы одинакового размера - по времени записи.

2. Экспериментально:
   - Критерий "Имя" переименован в "Только имя".
   - Критерий "Полное имя" переименован в "Имя".
   В обычных панелях разницы нет, а работать будет быстрее.
   В плагиновых панелях это имеет больше смысла при отображении полных имён.

3. Оптимизация перечитывания папки.

4. Пара мелочей.

drkns 29.06.2020 20:22:06 +0100 - build 5629

1. Извлечение CD при включенной опции Panel.RememberLogicalDrives приводило к забавным эффектам.

drkns 27.06.2020 15:01:02 +0100 - build 5628

1. Уточнение 5627.

drkns 26.06.2020 22:44:22 +0100 - build 5627

1. С форума: Странный автовозврат предыдущей пометки фильтра пользователя после редактирования.

2. Рефакторинг.

drkns 24.06.2020 17:33:33 +0100 - build 5626

1. 0003804: Не работает опция "сохранять позицию файла" в редакторе и просмотрщике.

drkns 21.06.2020 22:47:28 +0100 - build 5625

1. Рефакторинг.

drkns 20.06.2020 18:27:17 +0100 - build 5624

1. Продолжение 3449 - удаление в обход корзины доступно при любых ошибках, т.к. ОС в общем случае возвращает что попало.

svs 19.06.2020 00:24:34 +0300 - build 5623

1. SQLite 3.32.3

drkns 17.06.2020 19:50:37 +0100 - build 5622

1. Диалог прогресса копирования корректно отображает времена более 100 часов.

drkns 17.06.2020 08:40:49 +0100 - build 5621

1. Опечатка в 5620.

drkns 17.06.2020 01:01:01 +0100 - build 5620

1. Некорректная обработка флагов в DialogBuilder.

2. Уточнения сообщений об ошибках переключения кодовых страниц.

3. Рефакторинг.
