@@ -1,3 +1,11 @@
+drkns 03.07.2020 02:42:42 +0100 - build 5631
+
+1. Продолжение и углубление 5630.1:
+   - Множественные критерии сортировки можно определять перманентно: Ctrl+F12, F4 на режиме, Ins/Del/CtrlUp/CtrlDown/CtrlR.
+   - По умолчанию определены критерии, повторяющие предыдущее поведение.
+
+2. Исправлены новые и старые баги с сохранением выделения при обновлении панели.
+
 drkns 02.07.2020 01:07:47 +0100 - build 5630
 
 1. Экспериментально:
